[package]
name = "replay"
version = "0.1.0"
edition = "2021"
description = "Claude Code hook plugin — preserves user prompts across context compactions"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
walkdir = "2"
fs2 = "0.4"

[profile.release]
strip = true
lto = true
